--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
+    "react-toastify": "^9.0.8",
     "sass": "^1.54.3",
     "swiper": "^8.3.2"
   },
