--- a/package.json
+++ b/package.json
@@ -10,21 +10,27 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@apollo/client": "^3.6.9",
-    "contentful": "^9.1.33",
-    "graphql": "^16.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.4.0",
-    "react-photo-gallery": "^8.0.0",
-    "react-router-dom": "^6.3.0",
-    "react-toastify": "^9.0.8",
-    "sass": "^1.54.3",
-    "swiper": "^8.3.2"
+    "@apollo/client": "3.6.9",
+    "@gsap/react": "^2.1.0",
+    "@react-spring/web": "^9.7.3",
+    "contentful": "9.1.33",
+    "framer-motion": "^11.5.4",
+    "graphql": "16.5.0",
+    "gsap": "^3.12.5",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-icons": "4.4.0",
+    "react-image-gallery": "^1.3.0",
+    "react-router-dom": "6.3.0",
+    "react-spring-3d-carousel": "^1.3.4",
+    "react-toastify": "9.0.8",
+    "sass": "1.54.3",
+    "swiper": "8.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@types/react-image-gallery": "^1.2.4",
     "@vitejs/plugin-react": "^2.0.0",
     "typescript": "^4.6.4",
     "vite": "^3.0.0"
