--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "dependencies": {
     "@apollo/client": "3.6.9",
     "@gsap/react": "^2.1.0",
+    "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@react-spring/web": "^9.7.3",
@@ -31,15 +33,15 @@
     "lucide-react": "^0.441.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.53.2",
     "react-icons": "4.4.0",
-    "react-image-gallery": "^1.3.0",
     "react-router-dom": "6.3.0",
     "react-spring-3d-carousel": "^1.3.4",
     "react-toastify": "9.0.8",
     "sass": "1.54.3",
-    "swiper": "8.3.2",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.0",
