--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lucide-react": "^0.441.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.53.2",
     "react-icons": "4.4.0",
     "react-router-dom": "6.3.0",
@@ -48,6 +49,7 @@
     "@types/node": "^22.5.5",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@types/react-helmet": "^6.1.11",
     "@types/react-image-gallery": "^1.2.4",
     "@vitejs/plugin-react": "^2.2.0",
     "autoprefixer": "^10.4.20",
