--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "^11.5.4",
     "graphql": "16.5.0",
-    "gsap": "^3.12.5",
     "lucide-react": "^0.441.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -62,6 +61,7 @@
     "eslint-plugin-promise": "^6.6.0",
     "eslint-plugin-react": "^7.36.1",
     "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.9.0",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
